# MSSCAE24_TP_Final

./: README.md  pyproject.toml  requirements.txt
notebooks/: analisis.ipynb  market.ipynb  tipping_point.ipynb  tp_final.ipynb  whale.ipynb
scenarios/: 1.txt  basic_example.py  equilibrio_dinamico.py  get configuration.py  monopolios_basic.py  monopolios_complex.py
src/: bankrupt_utils.py  consumer.py  market.py  producer.py  profit_formula.py
tests/: test_consumer.py  test_market.py  test_producer.py  test_profit_formula.py
