[tool.poetry]
name = "msscae24-tp-final"
version = "0.1.0"
description = "MSSCAE24 TP Final"
authors = ["Armando Ezequiel Puerta <armando.ezequiel.puerta@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "msscae24_tp_final"}]

[tool.poetry.dependencies]
python = "^3.10"
simulab = "0.0.3"
ipykernel = "^6.29.4"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pre-commit = "^3.7.1"
flake8 = "^7.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"
black = {version = "^24.4.2", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
