[tool.poetry]
name = "msscae24-tp-final"
version = "0.1.0"
description = "MSSCAE24 TP Final"
authors = ["Armando Ezequiel Puerta <armando.ezequiel.puerta@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "msscae24_tp_final"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
nbformat = "^5.10.4"
simulab = "0.0.18"
pandas = "^2.2.2"
nbconvert = "^7.16.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pre-commit = "^3.7.1"
flake8 = "^7.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"
black = {version = "^24.4.2", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |
)
'''

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
